feat: can click buttons to add locations to routes

--- a/src/app/components/routes/routes.component.html
+++ b/src/app/components/routes/routes.component.html
@@ -17,4 +17,15 @@
     <td>{{route.mileage}}</td>
     <td>{{route.projectCode}}</td>
   </tr>
+  <tr>
+    <td>{{editingRoute.start?.name}}<br/>
+      {{editingRoute.start?.address}}
+    </td>
+    <td>{{editingRoute.end?.name}}<br/>
+      {{editingRoute.end?.address}}
+    </td>
+    <td>{{editingRoute.note}}</td>
+    <td>{{editingRoute.mileage}}</td>
+    <td>{{editingRoute.projectCode}}</td>
+  </tr>
 </table>
