--- a/src/app/components/locations/locations.component.html
+++ b/src/app/components/locations/locations.component.html
@@ -1,3 +1,3 @@
-<button *ngFor="let location of locations" (click)="onLocationClick(location)">
+<button mat-raised-button color="primary" *ngFor="let location of locations" (click)="onLocationClick(location)">
   {{location.name}}
 </button>
